12.4.0 (07-02-2025)
- Refactor: Move some IAcademicTreasuryPlatformDependentServices to AcademicTreasuryConstants [#qubIT-Fenix-6593]

12.3.2 (06-02-2025)
- Bug Fix: When creating academic treasury events for targets, get the FinantialEntity from the builder, instead of inferring with the degree [#qubIT-Fenix-6602]

12.3.1 (05-02-2025)
- Refactor: Move FenixEduAcademicTreasuryPlatformDependentServices#finantialEntityOfDegree to AcademicTreasuryConstants [#qubIT-Fenix-6593]

12.3.0 (31-01-2025)
- Refactor: Remove unused and deprecated classes and methods of ITreasuryBridgeAPI [#qubIT-Fenix-6565]

12.2.2 (27-01-2025)
- Bug Fix: Fix debts grabbing and setting finantial document, in debts aggregation strategy, run with debts generation rules [#qubIT-Fenix-6562]

12.2.1 (14-01-2025)
- Bug Fix: In debt and payment reports, exclude personal emails which the property currentPartyContact is not null [#qubIT-Fenix-6541]
- Bug Fix: In PersonCustomer#findUnique(), fix the sort comparator to consider active customers as highest precedence than from person merge [#qubIT-Fenix-6386]

12.2.0 (08-01-2025)
- Improvement: Configure recalculation of tuition installments in tuition payment plan [#qubIT-Fenix-6235]
- Improvement: Support recalculation from tuition payment plan in manual tuition creation [#qubIT-Fenix-6235]

12.1.1 (16-12-2024)
- Bug Fix: When retrieving the PersonCustomer#getActiveCustomer(), validate that the customer found it is active. If it is not, throw exception [#qubIT-Fenix-6386]

12.1.0 (12-12-2024)
- Bug Fix: Avoid NPE when reading debts accounts for report [#qubIT-Fenix-6052]
- New Feature: Tuition Payment Plan Allocations [#qubIT-Fenix-6235]

12.0.3 (27-11-2024)
- Improvement: Improves DebtAccountReportEntryBean by adding active registrations field [#qubIT-Fenix-6052]

12.0.2 (19-11-2024)
- Improvement: Add unique degree and execution year to existing report [#qubIT-Fenix-6110]

12.0.1 (18-11-2024)